--- a/404.html
+++ b/404.html
@@ -5,4 +5,4 @@ layout: default
   <h1>404</h1>
   <p>Your page URL is wrong</p>
 </div>
-<img src="images/donald.gif" alt="Donald Wrong" class="fof-img">
+<img src="images/Donald.gif" alt="Donald Wrong" class="fof-img">
