--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Brent De Roeck</title>
-<link rel="shortcut icon" href="/favicon-32x32.png"><link rel="shortcut icon" href="./favicon-32x32.png"><link rel="shortcut icon" href="./favicon-32x32.png"><link rel="shortcut icon" href="./favicon-32x32.png"><link rel="shortcut icon" href="./favicon-32x32.png"><link rel="shortcut icon" href="./favicon-32x32.png"><link rel="manifest" href="./manifest.024f785b0326956bb7624d87e096538c.json" /><link rel="shortcut icon" href="./favicon-32x32.png"><link rel="manifest" href="./manifest.json" /><link rel="shortcut icon" href="./favicon-32x32.png"></head>
-<body>
-  <div id="app">
-    
-  </div>
-<script type="text/javascript" src="/js/main.bundle.js"></script><script type="text/javascript" src="./js/main.bundle.js"></script><script type="text/javascript" src="./js/main.bundle.js"></script><script type="text/javascript" src="./js/main.bundle.js"></script><script type="text/javascript" src="./js/main.bundle.js"></script><script type="text/javascript" src="./js/main.bundle.js"></script><script type="text/javascript" src="./js/main.bundle.js"></script><script type="text/javascript" src="./js/main.bundle.js"></script></body>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>Brent De Roeck</title>
+  <link rel="manifest" href="./manifest.json" /><link rel="shortcut icon" href="./favicon-32x32.png"></head>
+  <body>
+    <div id="app">
+      
+    </div>
+  <script type="text/javascript" src="./js/main.bundle.js"></script></body>
 </html>
