--- a/index.html
+++ b/index.html
@@ -5,8 +5,5 @@
     <title>Brent De Roeck</title>
   <link rel="manifest" href="./manifest.json" /><link rel="shortcut icon" href="./favicon-32x32.png"></head>
   <body>
-    <div id="app">
-      
-    </div>
-  <script type="text/javascript" src="./js/main.bundle.js"></script></body>
+  <div id="root"></div><script type="text/javascript" src="./js/main.bundle.js"></script></body>
 </html>
