--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Brent De Roeck</title>
-  <link rel="manifest" href="./manifest.json" /><link rel="shortcut icon" href="./favicon-32x32.png"></head>
+  <link rel="manifest" href="./manifest.json" /><meta name="viewport" content="width=device-width, initial-scale=1.0"><link rel="shortcut icon" href="./favicon-32x32.png"></head>
   <body>
   <div id="root"></div><script type="text/javascript" src="./js/main.bundle.js"></script></body>
 </html>
